--- a/circle.yml
+++ b/circle.yml
@@ -15,3 +15,7 @@ test:
     override:
         - ./gradlew assembleDebug
         - cp -r app/build/outputs $CIRCLE_ARTIFACTS
+
+
+cache_directories:
+    - /usr/local/android-sdk-linux/build-tools/25.0.2
