--- a/circle.yml
+++ b/circle.yml
@@ -5,16 +5,16 @@ dependencies:
 
 general:
     artifacts:
-        - /home/ubuntu/citest2/app/build/outputs/apk/
+        - /home/ubuntu/instabugtest/app/build/outputs/apk/
 
 machine:
     environment:
         ANDROID_HOME: /usr/local/android-sdk-linux
 
-test:
-    override:
-        - ./gradlew assembleDebug
-        - cp -r app/build/outputs $CIRCLE_ARTIFACTS
+#test:
+#    override:
+#        - ./gradlew assembleDebug
+#        - cp -r app/build/outputs $CIRCLE_ARTIFACTS
 
 
 cache_directories:
